[gd_scene load_steps=4 format=3 uid="uid://b5dbxefng7d7y"]

[ext_resource type="Script" path="res://assets/entities/nova/nova_antlers/antlers.gd" id="1_wns3m"]
[ext_resource type="Texture2D" uid="uid://lvp7tivm6xex" path="res://assets/entities/nova/nova_antlers/beam.png" id="2_xpm3w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_licbr"]
size = Vector2(13, 332)

[node name="antlers" type="RayCast2D"]
position = Vector2(0, 12)
target_position = Vector2(0, 320)
collide_with_areas = true
script = ExtResource("1_wns3m")

[node name="antlers" type="Line2D" parent="."]
z_index = 1
points = PackedVector2Array(0, 0, 0, 320)
closed = true
width = 13.0
texture = ExtResource("2_xpm3w")
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="antlers2" type="Line2D" parent="."]
position = Vector2(0, -3.91718)
scale = Vector2(1, 1.02761)
points = PackedVector2Array(0, 0, 0, 320)
closed = true
width = 3.0
texture = ExtResource("2_xpm3w")
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="antlershit" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="AntlersHit" type="CollisionShape2D" parent="antlershit"]
position = Vector2(0, 160)
shape = SubResource("RectangleShape2D_licbr")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.83
one_shot = true

[connection signal="area_entered" from="antlershit" to="." method="_on_antletshit_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
